Fixed alignment of nav icons

--- a/1/sass/style.scss
+++ b/1/sass/style.scss
@@ -87,8 +87,20 @@ body {
     width: 100vw;
     display: flex;
     background-color: #FFF;
+    padding: 0 22px;
+    box-sizing: border-box;
 
     & > * {
         width: 50%;
+        display: flex;
+        align-items: center;
+    }
+
+    &__left_icon {
+
+    }
+
+    &__right_icon {
+        justify-content: flex-end;
     }
 }
